--- a/src/app/service-st/service-st.component.html
+++ b/src/app/service-st/service-st.component.html
@@ -16,13 +16,15 @@
                     <br>
                     <p-toolbar>
                         <ng-template pTemplate="left">
-                            <button pButton pRipple label="Tous Les Services" class="p-button-outlined p-button-rounded p-mr-2"
-                            (click)="onShowService('others')"></button>
-                            <button pButton pRipple label="Complement"
-                            class="p-button-outlined p-button-rounded p-mr-2"
-                            (click)="onShowService('complementaire')"></button>
+                            <button pButton pRipple label="Tous Les Services"
+                                class="p-button-outlined p-button-rounded p-mr-2"
+                                (click)="onShowService('others')"></button>
                             <button pButton pRipple label="Principal" class="p-button-outlined p-button-rounded p-mr-2"
-                            (click)="onShowService('principal')"></button>
+                                (click)="onShowService('principal')"></button>
+                            <button pButton pRipple label="Complement" class="p-button-outlined p-button-rounded p-mr-2"
+                                (click)="onShowService('complementaire')"></button>
+                            <button pButton pRipple label="Test" class="p-button-outlined p-button-rounded p-mr-2"
+                                (click)="onShowService('test')"></button>
                         </ng-template>
 
                         <ng-template pTemplate="right">
@@ -35,6 +37,9 @@
                         <app-dataview-service [someInput]="inputValue"></app-dataview-service>
                     </div>
                     <div *ngIf="typeService === 'complementaire'">
+                        <app-dataview-service [someInput]="inputValue"></app-dataview-service>
+                    </div>
+                    <div *ngIf="typeService === 'test'">
                         <app-dataview-service [someInput]="inputValue"></app-dataview-service>
                     </div>
                     <div *ngIf="typeService === 'others' ">
