--- a/src/app/service-st/consulter-service/consulter-service.component.html
+++ b/src/app/service-st/consulter-service/consulter-service.component.html
@@ -11,7 +11,7 @@
             </div>
           </div>
           <br>
-          <div class="container" *ngIf="test === false">
+          <div class="container" *ngIf="typeService === 'principal'">
             <div class="card">
               <div class="container-fliud">
                 <div class="wrapper row">
@@ -116,9 +116,106 @@
           </div>
 
           <!-- -->
+
+
+          <div class="container" *ngIf="typeService === 'test'">
+            <div class="card">
+              <div class="container-fliud">
+                <div class="wrapper row">
+                  <div class="preview col-md-1">
+                  </div>
+                  <div class="preview col-md-5">
+                    <br><br><br>
+                    <div class="preview-pic tab-content">
+                      <div class="tab-pane active" id="pic-1">
+                        <img [src]="urlphotoServiceST" width="100%" />
+                      </div>
+                    </div>
+                  </div>
+                  <div class="details col-md-1">
+                  </div>
+                  <div class="details col-md-4">
+                    <br>
+                    <div class="row">
+                      <div class="col-md-6">
+                      </div>
+                      <div class="col-md-6" style="padding-left: 10%;">
+                        <!-- <button style="margin-bottom: 20%; float: left;" class="add-to-cart btn btn-warning" type="button"
+                            routerLink="/approvisionnement-article/{{ serviceST.id }}">Approvisonnement</button> -->
+                      </div>
+                    </div>
+                    <br>
+                    <h2 class="product-title">{{ serviceSTT.libelle }}</h2>
+                    <br>
+                    <div class="row">
+                      <div class="col-md-6">
+                        <h5 class="price">Référence:
+                        </h5>
+                      </div>
+                      <div class="col-md-6" style="padding-left: 10%;">
+                        <h5 class="price">{{serviceSTT.id}}
+                        </h5>
+                      </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                      <div class="col-md-6">
+                        <h5 class="price">current price:
+                        </h5>
+                      </div>
+                      <div class="col-md-6" style="padding-left: 10%;">
+                        <h5 class="price">{{serviceSTT.prix}} &nbsp; TND
+                        </h5>
+                      </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                      <div class="col-md-6">
+                        <h5 class="price">Category:
+                        </h5>
+                      </div>
+                      <div class="col-md-6" style="padding-left: 10%;">
+                        <h5 class="price">{{serviceSTT.sexe}}
+                        </h5>
+                      </div>
+                    </div>
+                    <br>
+
+                    <div class="row">
+                      <div class="col-md-6">
+                        <h5 class="price">Visibilité :
+                        </h5>
+                      </div>
+                      <div class="col-md-6" style="padding-left: 10%;">
+                        <h5 class="price">
+                          <p-inputSwitch name="visible" [(ngModel)]="serviceSTT.visible" disabled>
+                          </p-inputSwitch>
+                        </h5>
+                      </div>
+                    </div>
+                    <br>
+
+
+                    <div class="row">
+                      <div class="col-md-11" style="margin-top: 5%;">
+                        <div class="action">
+                          <button style="margin: 5%" class="add-to-cart btn btn-success" type="button"
+                            routerLink="/update-service/{{ serviceSTT.id }}">Update</button>
+                          <button class="like btn btn-default" type="button" routerLink="/services">Retour</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- -->
+
           
 
-          <div class="container" *ngIf="test === true">
+          <div class="container" *ngIf="typeService === 'complementaire'">
             <div class="card">
               <div class="container-fliud">
                 <div class="wrapper row">
