--- a/src/app/service-st/dataview-service/dataview-service.component.html
+++ b/src/app/service-st/dataview-service/dataview-service.component.html
@@ -1,4 +1,4 @@
-<p-dataView #dv [value]="services" [paginator]="true" [rows]="9" filterBy="nom" [sortField]="sortField"
+<p-dataView #dv [value]="services" [paginator]="true" [rows]="9" filterBy="libelle" [sortField]="sortField"
     [sortOrder]="sortOrder" layout="grid">
     <ng-template pTemplate="header">
         <div class="p-d-flex p-flex-column p-flex-md-row p-jc-md-between">
@@ -63,11 +63,12 @@
 
                 <div class="product-grid-item-content">
                     <img [src]="'http://localhost:8443/image/get/' + product.id" />
-                    <div class="product-name">{{product.libelle}} {{product.prenom}}</div>
+                    <div class="product-name">{{product.libelle}}</div>
                     <br>
                     <!-- <span [class]="'product-badge status-' + product.dateNaissance"> Nombre Mois :
                         {{product.nbrMois}}</span>  -->
-                    <div class="product-description">Nombre Mois : {{ product.nbrMois}}</div>
+                    <div *ngIf="product.nbrMois != null" class="product-description">Nombre Mois : {{ product.nbrMois}}
+                    </div>
 
                 </div>
                 <div class="product-grid-item-bottom">
