--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -24,7 +24,7 @@
                         </ng-template>
 
                         <ng-template pTemplate="right">
-                            <button routerLink="/add-article" pButton pRipple icon="pi pi-plus"
+                            <button [disabled]="!edition" routerLink="/add-article" pButton pRipple icon="pi pi-plus"
                                 label="Ajouter Article" class="p-button-success p-mr-2"></button>
                         </ng-template>
                     </p-toolbar>
