--- a/src/app/borne/borne.component.html
+++ b/src/app/borne/borne.component.html
@@ -27,8 +27,8 @@
                         </ng-template>
 
                         <ng-template pTemplate="right">
-                            <button routerLink="/add-borne" pButton pRipple icon="pi pi-plus" label="Ajouter Borne"
-                                class="p-button-success p-mr-2"></button>
+                            <button [disabled]="!edition" routerLink="/add-borne" pButton pRipple icon="pi pi-plus"
+                                label="Ajouter Borne" class="p-button-success p-mr-2"></button>
                         </ng-template>
 
                     </p-toolbar>
