--- a/src/app/categorie/update-categorie/update-categorie.component.html
+++ b/src/app/categorie/update-categorie/update-categorie.component.html
@@ -47,7 +47,7 @@
                             <br>
                             <button mat-raised-button type="submit" class="btn btn-danger pull-right"
                                 (click)="openModal(template)">AJOUTER</button>
-                            <button routerLink="/categorie-list" mat-raised-button type="button"
+                            <button routerLink="/categories" mat-raised-button type="button"
                                 class="btn btn-success pull-right" style="margin-right: 1%;">ANNULER</button>
                             <div class="clearfix"></div>
                         </form>
