--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <div class="logo">
-    <a routerLink="/dashboard"class="simple-text" style="margin-bottom: 1%;">
+    <a routerLink="/acceuil"class="simple-text" style="margin-bottom: 1%;">
         <div class="logo-img">
             <img style="width: 250; height: 250;" src="/assets/images/loginsST.png"/>
         </div>
