--- a/src/app/joueur-pro/consulter-joueur-pro/consulter-joueur-pro.component.html
+++ b/src/app/joueur-pro/consulter-joueur-pro/consulter-joueur-pro.component.html
@@ -118,11 +118,13 @@
                         <h6 class="card-category text-gray">{{joueurPro.categorie.designation}}</h6>
                         <br>
                         <p class="card-description">
-                            Don't be scared of the truth because we need to restart the human foundation in truth And I love you like Kanye loves Kanye I love Rick Owens’ bed design but the back is...
+                            Don't be scared of the truth because we need to restart the human foundation in truth And I
+                            love you like Kanye loves Kanye I love Rick Owens’ bed design but the back is...
                         </p>
                         <br>
-                        <a href="javascript:void(0)" routerLink="/update-joueur-professionnel/{{ joueurPro.id }}"
-                         class="btn btn-danger btn-round">UPDATE</a>
+                        <a href="javascript:void(0)" [hidden]="!edition"
+                            routerLink="/update-joueur-professionnel/{{ joueurPro.id }}"
+                            class="btn btn-danger btn-round">UPDATE</a>
                         <br>
                     </div>
                     <br>
