--- a/src/app/parent/add-parent/add-parent.component.html
+++ b/src/app/parent/add-parent/add-parent.component.html
@@ -59,7 +59,7 @@
               <br>
               <button mat-raised-button type="submit" class="btn btn-danger pull-right"
                 (click)="onAddParent()">AJOUTER</button>
-              <button routerLink="/user-List" mat-raised-button type="button" class="btn btn-success pull-right"
+              <button routerLink="/parents" mat-raised-button type="button" class="btn btn-success pull-right"
                 style="margin-right: 1%;">ANNULER</button>
               <div class="clearfix" style="margin-bottom : 3%"></div>
             </form>
