--- a/src/app/role/update-role/update-role.component.html
+++ b/src/app/role/update-role/update-role.component.html
@@ -40,7 +40,7 @@
                             </div>
                             <button mat-raised-button type="submit" class="btn btn-danger pull-right"
                                 (click)="openModal(template)">AJOUTER</button>
-                            <button routerLink="/role-list" mat-raised-button type="button"
+                            <button routerLink="/roles" mat-raised-button type="button"
                                 class="btn btn-success pull-right" style="margin-right: 1%;">ANNULER</button>
                             <div class="clearfix"></div>
                         </form>
