--- a/src/app/user/add-user/add-user.component.html
+++ b/src/app/user/add-user/add-user.component.html
@@ -117,7 +117,7 @@
               <br>
               <button mat-raised-button type="submit" class="btn btn-danger pull-right"
                 (click)="onAddUser()">AJOUTER</button>
-              <button routerLink="/user-List" mat-raised-button type="button" class="btn btn-success pull-right"
+              <button routerLink="/utilisateurs" mat-raised-button type="button" class="btn btn-success pull-right"
                 style="margin-right: 1%;">ANNULER</button>
               <div class="clearfix" style="margin-bottom : 3%"></div>
             </form>
