--- a/src/app/user/update-user/update-user.component.html
+++ b/src/app/user/update-user/update-user.component.html
@@ -17,14 +17,13 @@
 
               <br>
               <div class="row">
-                <div class="col-md-5">
+                <div class="col-md-12">
                   <mat-form-field class="example-full-width">
                     <input matInput placeholder="Information Utilisaeur" disabled>
                   </mat-form-field>
                 </div>
               </div>
               <br>
-
               <div class="row">
                 <div class="col-md-6">
                   <mat-form-field class="example-full-width">
@@ -50,16 +49,13 @@
                   </mat-form-field>
                 </div>
               </div>
-
-              <br><br>
-
+              <br>
               <div class="row">
                 <div class="col-md-6">
                   <mat-form-field class="example-full-width">
                     <input matInput placeholder="Selectionner role " disabled>
                   </mat-form-field>
                 </div>
-
                 <div class="col-md-6" style="margin-top: 1%;">
                   <p-multiSelect [options]="listRole" [showToggleAll]="false" name="roles" [(ngModel)]="selectedRole"
                     optionLabel="designation" [virtualScroll]="true" [filter]="true" [itemSize]="34"
@@ -69,64 +65,40 @@
                         <div>{{country.value.designation}}</div>
                       </div>
                     </ng-template>
-
                   </p-multiSelect>
-
                 </div>
               </div>
-
               <br>
-
               <div class="row">
-                <div class="col-md-5">
+                <div class="col-md-12">
                   <mat-form-field class="example-full-width">
-                    <input matInput placeholder="Information De Connexion" disabled>
+                    <input matInput placeholder="Informations De Connexion" disabled>
                   </mat-form-field>
                 </div>
               </div>
-
               <br>
-
-             
-
-
               <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-6">
                   <mat-form-field class="example-full-width">
                     <input matInput placeholder="Username" type="text" name="username" [(ngModel)]="user.username">
                   </mat-form-field>
                 </div>
-              </div>
-
-              <div class="row">
-                <div class="col-md-6">
-                  <mat-form-field class="example-full-width">
-                    <input matInput placeholder="Password" type="password" name="password" [(ngModel)]="user.password">
-                  </mat-form-field>
-                </div>
                 <div class="col-md-6">
                   <mat-form-field class="example-full-width">
                     <input matInput placeholder="Password" type="password" name="password" [(ngModel)]="user.password">
                   </mat-form-field>
                 </div>
               </div>
-
-              <br>
-
-
-              <br>
-              <br>
               <br>
               <button mat-raised-button type="submit" class="btn btn-danger pull-right"
                 (click)="openModal(template)">AJOUTER</button>
-              <button routerLink="/user-List" mat-raised-button type="button" class="btn btn-success pull-right"
+              <button routerLink="/utilisateurs" mat-raised-button type="button" class="btn btn-success pull-right"
                 style="margin-right: 1%;">ANNULER</button>
               <div class="clearfix" style="margin-bottom : 3%"></div>
             </form>
           </div>
         </div>
       </div>
-
     </div>
   </div>
 </div>
@@ -135,22 +107,21 @@
 <ng-template #template>
 
   <div class="modal-header">
-      <h5 class="modal-title">CONFIRMATION</h5>
-      <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
-          <span aria-hidden="true">&times;</span>
-      </button>
+    <h5 class="modal-title">CONFIRMATION</h5>
+    <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+      <span aria-hidden="true">&times;</span>
+    </button>
   </div>
 
   <div class="modal-body">
-      <p>Êtes-vous sûr de vouloir modifier définitivement cet utilisateur.</p>
+    <p>Êtes-vous sûr de vouloir modifier définitivement cet utilisateur.</p>
   </div>
 
   <div class="modal-footer">
 
-      <button mat-raised-button type="submit" class="btn btn-danger pull-right"
-      (click)="modalRef.hide()" >NON</button>
+    <button mat-raised-button type="submit" class="btn btn-danger pull-right" (click)="modalRef.hide()">NON</button>
 
-      <button mat-raised-button type="button" class="btn btn-success pull-right" style="margin-right: 1%;"
+    <button mat-raised-button type="button" class="btn btn-success pull-right" style="margin-right: 1%;"
       (click)="ngOnUpdateUtilisateur()">OUI</button>
 
   </div>
