--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -16,19 +16,12 @@
                     <br>
                     <p-toolbar>
                         <ng-template pTemplate="left">
-                            <p-fileUpload #fubauto mode="basic" name="demo[]" url="./upload.php" accept="image/*"
-                                maxFileSize="1000000" (onUpload)="onBasicUploadAuto($event)" [auto]="true"
-                                chooseLabel="Browse"></p-fileUpload>
-                            &nbsp;&nbsp;
                             <button pButton pRipple label="Export" icon="pi pi-download" class="p-button-help"></button>
-
-
-
                         </ng-template>
 
                         <ng-template pTemplate="right">
-                            <button routerLink="/add-user" pButton pRipple icon="pi pi-plus" label="Ajouter Utilisateur"
-                                class="p-button-success p-mr-2"></button>
+                            <button [disabled]="!edition" routerLink="/add-user" pButton pRipple icon="pi pi-plus"
+                                label="Ajouter Utilisateur" class="p-button-success p-mr-2"></button>
                         </ng-template>
 
                     </p-toolbar>
@@ -41,8 +34,7 @@
 
                             <ng-template pTemplate="header">
                                 <tr>
-                                    <th pSortableColumn="id">ID <p-sortIcon field="id"></p-sortIcon>
-                                    </th>
+
                                     <th pSortableColumn="nom">Nom <p-sortIcon field="nom"></p-sortIcon>
                                     </th>
                                     <th pSortableColumn="prenom">Prenom <p-sortIcon field="prenom"></p-sortIcon>
@@ -52,14 +44,11 @@
                                     </th>
                                     <th pSortableColumn="email">E-mail <p-sortIcon field="email"></p-sortIcon>
                                     </th>
+                                    <th>Autorisations</th>
                                     <th style="width:4rem"></th>
                                 </tr>
                                 <tr>
-                                    <th>
-                                        <input pInputText type="text"
-                                            (input)="dt.filter($event.target.value, 'id', 'contains')" placeholder="ID"
-                                            class="p-column-filter">
-                                    </th>
+
                                     <th>
                                         <input pInputText type="text"
                                             (input)="dt.filter($event.target.value, 'nom', 'contains')"
@@ -83,18 +72,27 @@
                                     <th>
 
                                     </th>
+                                    <th>
+
+                                    </th>
                                 </tr>
                             </ng-template>
 
                             <ng-template pTemplate="body" let-user>
                                 <tr [pSelectableRow]="user">
-                                    <td>{{user.id}}</td>
+
                                     <td>{{user.nom}}</td>
                                     <td>{{user.prenom}}</td>
                                     <td>{{user.telephone}}</td>
                                     <td>{{user.email}}</td>
                                     <td>
-                                        <button routerLink="/update-List/{{ user.id }}" pButton pRipple type="button" icon="pi pi-search"
+                                        <button [disabled]="!edition" routerLink="/autorisations/{{ user.username }}"
+                                            pButton pRipple type="button" icon="pi pi-search"
+                                            class="p-button-rounded p-button-success"></button>
+                                    </td>
+                                    <td>
+                                        <button [disabled]="!edition" routerLink="/update-user/{{ user.id }}" pButton
+                                            pRipple type="button" icon="pi pi-pencil"
                                             class="p-button-rounded p-button-success"></button>
                                     </td>
                                 </tr>
